TypeList & TypeView & NoServer & NotFound & Terms > messages

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -54,7 +54,7 @@
   "infinity.scenes.Topic.TopicBody.edit": "Edit",
   "infinity.scenes.Topic.TopicBody.draft": "draft",
   "infinity.scenes.Topic.TopicBody.topicType": "Topic type",
-  "infinity.scenes.Topic.Comments.commentsTitle": "draft",
+  "infinity.scenes.Topic.Comments.commentsTitle": "Comments",
   "infinity.scenes.Topic.Comments.reply": "Reply",
   "infinity.scenes.Topic.Comments.error": "Error",
   "infinity.scenes.Topic.Comments.success": "Success",
@@ -73,7 +73,7 @@
   "infinity.scenes.Topic.TransactionBox.currency": "Currency",
   "infinity.scenes.Topic.CommentForm.cancel": "Cancel",
   "infinity.scenes.Topic.CommentForm.save": "Save",
-  "infinity.scenes.Topic.CommentForm.toLeaveComment": "to leave a comment.",
+  "infinity.scenes.Topic.CommentForm.toLeaveComment": "to leave a comment",
   "infinity.scenes.Topic.CommentForm.submit": "Submit",
   "infinity.scenes.Topic.CommentForm.leaveComment": "Leave your comment",
   "infinity.scenes.TopicView.Menu.title": "Menu",
@@ -97,5 +97,19 @@
   "infinity.scenes.TopicView.topicTitle": "Topic Title",
   "infinity.scenes.TopicView.parents": "Parents",
   "infinity.scenes.TopicView.draft": "Draft",
-  "infinity.scenes.TopicView.public": "Public"
+  "infinity.scenes.TopicView.public": "Public",
+  "infinity.scenes.TopicList.types": "Types",
+  "infinity.scenes.UserTransactions.homeLink": "Home",
+  "infinity.scenes.UserTransactions.by": "Investment by",
+  "infinity.scenes.UserTransactions.time": "Time",
+  "infinity.scenes.UserTransactions.money": "Money",
+  "infinity.scenes.UserTransactions.sell": "Sell",
+  "infinity.scenes.UserTransactions.empty": "Empty",
+  "infinity.scenes.UserTransactions.type": "Type",
+  "infinity.scenes.UserTransactions.contribution": "Contribution",
+  "infinity.scenes.UserTransactions.none": "None",
+  "infinity.scenes.NotFound.noContent": "404. No such content.",
+  "infinity.scenes.NoServer.noServer": "There is no {name} server.",
+  "infinity.scenes.NoServer.such": "such",
+  "infinity.scenes.Terms.tos": "Terms of service"
 }
