components > messages & style checka

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -111,5 +111,56 @@
   "infinity.scenes.NotFound.noContent": "404. No such content.",
   "infinity.scenes.NoServer.noServer": "There is no {name} server.",
   "infinity.scenes.NoServer.such": "such",
-  "infinity.scenes.Terms.tos": "Terms of service"
+  "infinity.scenes.Terms.tos": "Terms of service",
+  "infinity.common.shortCountableHours.COUNT":
+    "{count, number}{count, plural, =0 {''} one {h} other {h}}",
+  "infinity.components.Balance.balanceTooltip": "Balance",
+  "infinity.components.Balance.remainingQuotaTooltip": "Remaining quota",
+  "infinity.components.CategorySelect.selectPlaceholder": "Select...",
+  "infinity.components.FlagToggle.all": "All",
+  "infinity.components.ServerSelect.server": "Server",
+  "infinity.components.Menu.newTopic": "New Topic",
+  "infinity.components.Menu.home": "Home",
+  "infinity.components.Menu.what": "What?",
+  "infinity.components.Menu.signOut": "Sign Out",
+  "infinity.components.Menu.signIn": "Sign In",
+  "infinity.components.Menu.how": "How?",
+  "infinity.components.Menu.menuDefautlTitle": "Menu",
+  "infinity.components.PayCheckout.amountPlaceholder": "Amount",
+  "infinity.components.PayCheckout.CurrencyLabel": "Currency",
+  "infinity.components.PayCheckout.descriptionPlaceholder": "Description",
+  "infinity.components.PayCheckout.serverError": "Server error. Try again.",
+  "infinity.components.PayCheckout.pay": "Pay",
+  "infinity.components.PayCheckout.name": "Name",
+  "infinity.components.PayCheckout.cvc": "CVC",
+  "infinity.components.PayCheckout.date": "MM/YY",
+  "infinity.components.PayCheckout.card": "Card Number",
+  "infinity.components.PayCheckout.zip": "ZIP",
+  "infinity.components.PayCheckout.toFund": "to fund the project",
+  "infinity.components.ProgramToggle.programs": "Programs",
+  "infinity.components.ProgramToggle.importingToolip":
+    "Importing programs will be released coming soon...",
+  "infinity.components.SignInLine.signIn": "Sign In",
+  "infinity.components.TabDataField.dataField": "Data Field",
+  "infinity.components.TabDataField.putData": "Put your data here",
+  "infinity.components.TabDataField.send": "Send",
+  "infinity.components.TabDataField.close": "Close",
+  "infinity.components.TabDataField.show": "Show",
+  "infinity.components.TabToggle.objects": "Objects",
+  "infinity.components.TextEditor.bold": "Bold",
+  "infinity.components.TextEditor.italic": "Italic",
+  "infinity.components.TextEditor.underline": "Underline",
+  "infinity.components.TextEditor.ul": "UL",
+  "infinity.components.TextEditor.ol": "OL",
+  "infinity.components.TextEditor.normal": "Normal",
+  "infinity.components.TextEditor.heading1": "Heading 1",
+  "infinity.components.TextEditor.heading2": "Heading 2",
+  "infinity.components.TextEditor.heading3": "Heading 3",
+  "infinity.components.TopicFundData.topicFundTooltip":
+    "The number of hours reserved for the topic",
+  "infinity.components.TopicFundData.fund": "Fund",
+  "infinity.components.TopicProgressBar.assumed": "Assumed",
+  "infinity.components.TopicProgressBar.overpay": "Overpay",
+  "infinity.components.TopicProgressBar.claimed": "Claimed",
+  "infinity.components.TopicProgressBar.ivested": "Invested"
 }
