--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -1,5 +1,169 @@
 {
   "infinity.components.Header.title": "Семья Инфинити",
   "infinity.components.Header.subtitle":
-    "Открытые проекты для реализации глобальных целей"
+    "Открытые проекты для реализации глобальных целей",
+  "infinity.scenes.Home.Menu.title": "Главная",
+  "infinity.scenes.Home.TopicList.noTopics":
+    "Нет постов. Пропробуйте изменить фильтр.",
+  "infinity.scenes.Home.HomeConfigPanel.search": "Поиск",
+  "infinity.scenes.Home.HomeConfigPanel.selectPlaceholder":
+    "Выберете категории...",
+  "infinity.scenes.Home.HomeConfigPanel.TopicSourceToggle.filter": "Фильтр",
+  "infinity.scenes.Home.HomeConfigPanel.TopicSourceToggle.view": "Тип",
+  "infinity.scenes.Home.HomeConfigPanel.TopicSourceToggle.source": "Источник",
+  "infinity.scenes.Home.HomeConfigPanel.TopicSourceToggle.tree": "Дерево",
+  "infinity.scenes.Home.HomeConfigPanel.TopicSourceToggle.grid": "Карты",
+  "infinity.scenes.Home.HomeConfigPanel.TopicSourceToggle.topLevel":
+    "Top-Level",
+  "infinity.scenes.Home.HomeConfigPanel.TopicSourceToggle.all": "Все",
+  "infinity.scenes.OtpLogin.commonErrorTitle": "Ошибка =(",
+  "infinity.scenes.OtpLogin.commonErrorText":
+    "Что-то пошло не так. Попробуйте снова.",
+  "infinity.scenes.OtpLogin.signInError": "Ошибка входы",
+  "infinity.scenes.OtpLogin.invalidCaptcha": "Неверный код. Попробуйте снова.",
+  "infinity.scenes.OtpLogin.signInErrorfillOut": "Поле должно быть заполнено.",
+  "infinity.scenes.OtpLogin.signInErrorWrongCode":
+    "Неверный код. Попробуйте снова.",
+  "infinity.scenes.OtpLogin.EmailView.invalidEmail":
+    "Достуа вашей огранизации запрещен. Введите другой e-mail.",
+  "infinity.scenes.OtpLogin.EmailView.serverErrTitle": "Ошибка сервера",
+  "infinity.scenes.OtpLogin.EmailView.allFilledOut":
+    "Все поля должны быть заполнены.",
+  "infinity.scenes.OtpLogin.EmailView.emailPlaceholder": "E-mail",
+  "infinity.scenes.OtpLogin.EmailView.captchaPlaceholder": "Код",
+  "infinity.scenes.OtpLogin.EmailView.tosRead":
+    "Я ознакомился и согласен с документом:",
+  "infinity.scenes.OtpLogin.EmailView.tos": "Условия использования",
+  "infinity.scenes.OtpLogin.EmailView.continue": "Продолжить",
+  "infinity.scenes.OtpLogin.LoginView.HTML.otpHasBeenSent":
+    "<strong>Одноразовый пароль</strong> был отпрален на ваш e-mail.",
+  "infinity.scenes.OtpLogin.LoginView.resend": "Отправить код снова.",
+  "infinity.scenes.OtpLogin.LoginView.submit": "Отправить",
+  "infinity.scenes.QuotaBox.buy": "Купить банковской картой",
+  "infinity.scenes.QuotaBox.history": "История оплат",
+  "infinity.scenes.QuotaBox.quotaDescription":
+    "Просмотрите проекты и выберете те, которые Вам нравятся.",
+  "infinity.scenes.QuotaBox.countableHours.COUNT":
+    "{count, plural, =0 {No available quota.} one {час} few {часа} many {часов} other {часа}}",
+  "infinity.scenes.QuotaBox.amounfOfHours": "часов",
+  "infinity.scenes.QuotaBox.yourQuota": "Ваша квота",
+  "infinity.scenes.StreamTab.Widgets.show": "Показать",
+  "infinity.scenes.StreamTab.Modals.createdAt": "Создано:",
+  "infinity.scenes.Topic.Menu.title": "Меню",
+  "infinity.scenes.Topic.homeButton": "Главная",
+  "infinity.scenes.Topic.close": "Закрыть",
+  "infinity.scenes.Topic.TopicBody.edit": "Редактировать",
+  "infinity.scenes.Topic.TopicBody.draft": "черновик",
+  "infinity.scenes.Topic.TopicBody.topicType": "Тип топика",
+  "infinity.scenes.Topic.Comments.commentsTitle": "Комментарии",
+  "infinity.scenes.Topic.Comments.reply": "Ответить",
+  "infinity.scenes.Topic.Comments.error": "Ошибка",
+  "infinity.scenes.Topic.Comments.success": "Успешно",
+  "infinity.scenes.Topic.Comments.investment": "Инвестиции",
+  "infinity.scenes.Topic.Comments.invest": "Инвестировать",
+  "infinity.scenes.Topic.TransactionBox.buy": "Купить банковской картой",
+  "infinity.scenes.Topic.TransactionBox.invalidHours":
+    "Неверное количество часов.",
+  "infinity.scenes.Topic.TransactionBox.quotaOver": "Достигнул лимит квоты.",
+  "infinity.scenes.Topic.TransactionBox.remaining": "Осталось квоты",
+  "infinity.scenes.Topic.TransactionBox.amount": "Количество",
+  "infinity.scenes.Topic.TransactionBox.receiver": "Получатель:",
+  "infinity.scenes.Topic.TransactionBox.countableHours.COUNT":
+    "{count, plural, =0 {: нет квоты.} one {час} few {часа} many {часов} other {часа}}",
+  "infinity.scenes.Topic.TransactionBox.currency": "Валюта",
+  "infinity.scenes.Topic.CommentForm.cancel": "Отменить",
+  "infinity.scenes.Topic.CommentForm.save": "Сохранить",
+  "infinity.scenes.Topic.CommentForm.toLeaveComment":
+    "чтобы оставить комментарий",
+  "infinity.scenes.Topic.CommentForm.submit": "Отправить",
+  "infinity.scenes.Topic.CommentForm.leaveComment": "Оставте свой комментарий",
+  "infinity.scenes.TopicView.Menu.title": "Меню",
+  "infinity.scenes.TopicView.submitErrorText":
+    "Заголовок обязателен к заполнению.",
+  "infinity.scenes.TopicView.submitError": "Ошибка при отправке формы",
+  "infinity.scenes.TopicView.success": "Успешно",
+  "infinity.scenes.TopicView.available": "Ваш топик доступен по ссылке:",
+  "infinity.scenes.TopicView.back": "Назад",
+  "infinity.scenes.TopicView.toPost": "что бы опубликовать пост",
+  "infinity.scenes.TopicView.save": "Сохранить",
+  "infinity.scenes.TopicView.create": "Создать",
+  "infinity.scenes.TopicView.confirmation": "Подтверждение",
+  "infinity.scenes.TopicView.deleteConfirmation":
+    "Вы уверены, что хотите удалить топик?",
+  "infinity.scenes.TopicView.close": "Закрыть",
+  "infinity.scenes.TopicView.delete": "Удалить",
+  "infinity.scenes.TopicView.textPlaceholder": "Поделитесь своими мыслями...",
+  "infinity.scenes.TopicView.typeLabel": "Тип",
+  "infinity.scenes.TopicView.categoryLabel": "Категории",
+  "infinity.scenes.TopicView.topicTitleLabel": "О чем думаете?",
+  "infinity.scenes.TopicView.topicTitle": "Заголовок",
+  "infinity.scenes.TopicView.parents": "Родительские посты",
+  "infinity.scenes.TopicView.draft": "Черновик",
+  "infinity.scenes.TopicView.public": "Опубликовать",
+  "infinity.scenes.TopicList.types": "Типы",
+  "infinity.scenes.UserTransactions.homeLink": "Главная",
+  "infinity.scenes.UserTransactions.by": "Инвестировано пользователем",
+  "infinity.scenes.UserTransactions.time": "Время",
+  "infinity.scenes.UserTransactions.money": "Деньги",
+  "infinity.scenes.UserTransactions.sell": "Продать",
+  "infinity.scenes.UserTransactions.empty": "Пусто",
+  "infinity.scenes.UserTransactions.type": "Тип",
+  "infinity.scenes.UserTransactions.contribution": "Вклад",
+  "infinity.scenes.UserTransactions.none": "Пусто",
+  "infinity.scenes.NotFound.noContent": "404. А что это вы искали?).",
+  "infinity.scenes.NoServer.noServer": "Такого сервера {name} нет.",
+  "infinity.scenes.NoServer.such": "",
+  "infinity.scenes.Terms.tos": "Условия использования",
+  "infinity.common.shortCountableHours.COUNT":
+    "{count, number}{count, plural, =0 {''} one {ч} other {ч}}",
+  "infinity.components.Balance.balanceTooltip": "Баланс",
+  "infinity.components.Balance.remainingQuotaTooltip": "Оставшаяся квота",
+  "infinity.components.CategorySelect.selectPlaceholder": "Выбрать...",
+  "infinity.components.FlagToggle.all": "Все",
+  "infinity.components.ServerSelect.server": "Сервер",
+  "infinity.components.Menu.newTopic": "Новый топик",
+  "infinity.components.Menu.home": "Главная",
+  "infinity.components.Menu.what": "О чем?",
+  "infinity.components.Menu.signOut": "Выйти",
+  "infinity.components.Menu.signIn": "Войти",
+  "infinity.components.Menu.how": "А как?",
+  "infinity.components.Menu.menuDefautlTitle": "Меню",
+  "infinity.components.PayCheckout.amountPlaceholder": "Количество",
+  "infinity.components.PayCheckout.CurrencyLabel": "Валюта",
+  "infinity.components.PayCheckout.descriptionPlaceholder": "Описание",
+  "infinity.components.PayCheckout.serverError":
+    "Ошибка сервера. Попробуйте снова.",
+  "infinity.components.PayCheckout.pay": "Оплатить",
+  "infinity.components.PayCheckout.name": "Имя",
+  "infinity.components.PayCheckout.cvc": "CVC",
+  "infinity.components.PayCheckout.date": "MM/YY",
+  "infinity.components.PayCheckout.card": "Номер карты",
+  "infinity.components.PayCheckout.zip": "ZIP",
+  "infinity.components.PayCheckout.toFund": "чтобы инвестировать в проект",
+  "infinity.components.ProgramToggle.programs": "Программы",
+  "infinity.components.ProgramToggle.importingToolip":
+    "Возможность импорта программ будет добавлена...",
+  "infinity.components.SignInLine.signIn": "Нажмите войти",
+  "infinity.components.TabDataField.dataField": "Поле данных",
+  "infinity.components.TabDataField.putData": "Введите ваши данные",
+  "infinity.components.TabDataField.send": "Отправить",
+  "infinity.components.TabDataField.close": "Закрыть",
+  "infinity.components.TabDataField.show": "Показать",
+  "infinity.components.TabToggle.objects": "Объекты",
+  "infinity.components.TextEditor.bold": "Жирный",
+  "infinity.components.TextEditor.italic": "Курсив",
+  "infinity.components.TextEditor.underline": "Подчернут",
+  "infinity.components.TextEditor.ul": "Список",
+  "infinity.components.TextEditor.ol": "Нумерованный список",
+  "infinity.components.TextEditor.normal": "Обычный",
+  "infinity.components.TextEditor.heading1": "Заголовок 1",
+  "infinity.components.TextEditor.heading2": "Заголовок 2",
+  "infinity.components.TextEditor.heading3": "Заголовок 3",
+  "infinity.components.TopicFundData.topicFundTooltip":
+    "Количество зарезервированные часов для реализации проекта",
+  "infinity.components.TopicFundData.fund": "Вложить",
+  "infinity.components.TopicProgressBar.assumed": "Предологается",
+  "infinity.components.TopicProgressBar.overpay": "Дополнительно",
+  "infinity.components.TopicProgressBar.claimed": "Отработано",
+  "infinity.components.TopicProgressBar.ivested": "Инвестированно"
 }
