--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -14,7 +14,7 @@
   "infinity.scenes.Home.HomeConfigPanel.TopicSourceToggle.tree": "Дерево",
   "infinity.scenes.Home.HomeConfigPanel.TopicSourceToggle.grid": "Карты",
   "infinity.scenes.Home.HomeConfigPanel.TopicSourceToggle.topLevel":
-    "Top-Level",
+    "Родительские посты",
   "infinity.scenes.Home.HomeConfigPanel.TopicSourceToggle.all": "Все",
   "infinity.scenes.OtpLogin.commonErrorTitle": "Ошибка =(",
   "infinity.scenes.OtpLogin.commonErrorText":
@@ -47,6 +47,7 @@
     "{count, plural, =0 {No available quota.} one {час} few {часа} many {часов} other {часа}}",
   "infinity.scenes.QuotaBox.amounfOfHours": "часов",
   "infinity.scenes.QuotaBox.yourQuota": "Ваша квота",
+  "infinity.scenes.StreamTab.schema": "Схема",
   "infinity.scenes.StreamTab.Widgets.show": "Показать",
   "infinity.scenes.StreamTab.Modals.createdAt": "Создано:",
   "infinity.scenes.Topic.Menu.title": "Меню",
@@ -54,7 +55,7 @@
   "infinity.scenes.Topic.close": "Закрыть",
   "infinity.scenes.Topic.TopicBody.edit": "Редактировать",
   "infinity.scenes.Topic.TopicBody.draft": "черновик",
-  "infinity.scenes.Topic.TopicBody.topicType": "Тип топика",
+  "infinity.scenes.Topic.TopicBody.topicType": "Тип поста",
   "infinity.scenes.Topic.Comments.commentsTitle": "Комментарии",
   "infinity.scenes.Topic.Comments.reply": "Ответить",
   "infinity.scenes.Topic.Comments.error": "Ошибка",
@@ -82,14 +83,15 @@
     "Заголовок обязателен к заполнению.",
   "infinity.scenes.TopicView.submitError": "Ошибка при отправке формы",
   "infinity.scenes.TopicView.success": "Успешно",
-  "infinity.scenes.TopicView.available": "Ваш топик доступен по ссылке:",
+  "infinity.scenes.TopicView.available": "Ваш пост доступен по ссылке:",
   "infinity.scenes.TopicView.back": "Назад",
   "infinity.scenes.TopicView.toPost": "что бы опубликовать пост",
   "infinity.scenes.TopicView.save": "Сохранить",
   "infinity.scenes.TopicView.create": "Создать",
   "infinity.scenes.TopicView.confirmation": "Подтверждение",
+  "infinity.scenes.TopicView.select": "Выбрать...",
   "infinity.scenes.TopicView.deleteConfirmation":
-    "Вы уверены, что хотите удалить топик?",
+    "Вы уверены, что хотите удалить пост?",
   "infinity.scenes.TopicView.close": "Закрыть",
   "infinity.scenes.TopicView.delete": "Удалить",
   "infinity.scenes.TopicView.textPlaceholder": "Поделитесь своими мыслями...",
@@ -110,7 +112,7 @@
   "infinity.scenes.UserTransactions.type": "Тип",
   "infinity.scenes.UserTransactions.contribution": "Вклад",
   "infinity.scenes.UserTransactions.none": "Пусто",
-  "infinity.scenes.NotFound.noContent": "404. А что это вы искали?).",
+  "infinity.scenes.NotFound.noContent": "404. А что это Вы искали?).",
   "infinity.scenes.NoServer.noServer": "Такого сервера {name} нет.",
   "infinity.scenes.NoServer.such": "",
   "infinity.scenes.Terms.tos": "Условия использования",
@@ -118,10 +120,13 @@
     "{count, number}{count, plural, =0 {''} one {ч} other {ч}}",
   "infinity.components.Balance.balanceTooltip": "Баланс",
   "infinity.components.Balance.remainingQuotaTooltip": "Оставшаяся квота",
-  "infinity.components.CategorySelect.selectPlaceholder": "Выбрать...",
+  "infinity.common.Select.selectPlaceholder": "Выбрать...",
+  "infinity.common.Select.loadingPlaceholder": "Загрузка...",
+  "infinity.common.Select.searchPromptText": "Начните печатать для поиска",
+  "infinity.common.Select.noResultsText": "Нет результатов",
   "infinity.components.FlagToggle.all": "Все",
   "infinity.components.ServerSelect.server": "Сервер",
-  "infinity.components.Menu.newTopic": "Новый топик",
+  "infinity.components.Menu.newTopic": "Новый пост",
   "infinity.components.Menu.home": "Главная",
   "infinity.components.Menu.what": "О чем?",
   "infinity.components.Menu.signOut": "Выйти",
@@ -136,9 +141,9 @@
   "infinity.components.PayCheckout.pay": "Оплатить",
   "infinity.components.PayCheckout.name": "Имя",
   "infinity.components.PayCheckout.cvc": "CVC",
-  "infinity.components.PayCheckout.date": "MM/YY",
+  "infinity.components.PayCheckout.date": "ММ/ГГ",
   "infinity.components.PayCheckout.card": "Номер карты",
-  "infinity.components.PayCheckout.zip": "ZIP",
+  "infinity.components.PayCheckout.zip": "Почтовый индекс",
   "infinity.components.PayCheckout.toFund": "чтобы инвестировать в проект",
   "infinity.components.ProgramToggle.programs": "Программы",
   "infinity.components.ProgramToggle.importingToolip":
@@ -165,5 +170,12 @@
   "infinity.components.TopicProgressBar.assumed": "Предологается",
   "infinity.components.TopicProgressBar.overpay": "Дополнительно",
   "infinity.components.TopicProgressBar.claimed": "Отработано",
-  "infinity.components.TopicProgressBar.ivested": "Инвестированно"
+  "infinity.components.TopicProgressBar.ivested": "Инвестированно",
+  "infinity.common.configs.all": "Все",
+  "infinity.common.configs.need": "Запрос",
+  "infinity.common.configs.goal": "Цель",
+  "infinity.common.configs.idea": "Идея",
+  "infinity.common.configs.plan": "План",
+  "infinity.common.configs.step": "Шаг",
+  "infinity.common.configs.task": "Задача"
 }
